fixed some janky-ness on mobile view

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
 	--colour-shadow: #e0e0e0;
 	--colour-shadow-2: #adadad;
 	--font-colour: #363636;
+	--hide-colour: #a3a3a3;
 	font-family: Helvetica Neue, Arial;
 	line-height: 20px;
 	text-align: center;
@@ -40,6 +41,7 @@ header {
 }
 
 #theme-button {
+	z-index: 1;
 	font-weight: bold;
 	position: fixed;
 	top: 4vh;
@@ -64,7 +66,7 @@ h1 {
 }
 
 h2 {
-	font-size: 22px;
+	font-size: 26px;
 	padding-top: 10px;
 }
 
@@ -108,9 +110,30 @@ a {
 	width: 30%;
 }
 
-.languages-card,
+.hide-button,
+.show-button {
+	color: #a3a3a3;
+	font-style: italic;
+	position: absolute;
+	top: 5px;
+	right: 30px;
+	cursor: pointer;
+	transition: all 0.3s ease;
+}
+
+.hide-button:hover,
+.show-button:hover {
+	color: var(--colour-highlight);
+}
+
+.show-button {
+	display: none;
+}
+
+#languages-card,
 .skills-card,
 .education-card,
+.employment-card,
 .info-card,
 .other-card,
 .other-card-2 {
@@ -120,7 +143,8 @@ a {
 	border-top: 6px var(--colour-highlight) solid;
 	border-radius: 10px;
 	-webkit-box-shadow: 0 0 10px var(--colour-shadow);
-    box-shadow: 0 0 10px var(--colour-shadow);
+	box-shadow: 0 0 10px var(--colour-shadow);
+	position: relative;
 }
 
 .info-card,
@@ -179,22 +203,23 @@ a {
 }
 
 .skill {
-	background-color: var(--colour-secondary);
-	color: var(--font-colour);
-	width: 120px;
+	margin: 0 auto 10px auto;
 	padding: 5px;
+	width: 120px;
+	color: var(--font-colour);
+	background-color: var(--colour-secondary);
 	border-radius: 10px;
 	font-weight: bold;
 	transition: 0.3s;
-	margin: 0 auto 10px auto;
+	cursor: pointer;
 }
 
 .skill:hover {
 	width: 130px;
-	color: var(--colour-highlight);
-	background-color: var(--colour-background);
-	-webkit-box-shadow: 0 0 10px var(--colour-shadow-2);
-    box-shadow: 0 0 10px var(--colour-shadow-2);
+	color: var(--colour-background);
+	background-color: var(--colour-highlight);
+	-webkit-box-shadow: 0 0 10px var(--colour-shadow);
+    box-shadow: 0 0 10px var(--colour-shadow);
 }
 
 .skill-descriptor {
@@ -227,7 +252,7 @@ a {
 	margin: 0px 30px;
 }
 
-.education-table {
+.table {
 	text-align: left;
 	margin: auto;
 	max-width: 700px;
@@ -251,6 +276,10 @@ a {
 
 sup {
 	font-size: 10px;
+}
+
+.employment-title span {
+	font-weight: bold;
 }
 
 footer {
@@ -316,6 +345,24 @@ footer p {
 }
 
 @media screen and (max-width: 630px) {
+	body {
+		margin: 0px 10px;
+	}
+	header {
+		padding-right: 10px;
+	}
+	.table {
+		text-align: center;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	.table div {
+		margin-bottom: 30px;
+	}
+	.table div p {
+		text-align: left;
+	}
 	.other-content {
 		display: flex;
 		flex-direction: column;
